--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 
 
 /* App.css */
-.modal-overlay {
+/* .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -100,4 +100,4 @@ form button {
 
 form button:hover {
   background-color: #218838;
-}
+} */
